# mcp-oceanbase

./: .env.template  .gitignore  README.md  README_CN.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: push_pr.yaml
.github/workflows/: publish.yaml  publish_obdiag_mcp.yaml  publish_oceanbase_mcp.yaml  push_pr.yaml
doc/: obdiag_mcp_server.md  obdiag_mcp_server_CN.md  obshell_mcp_server.md  obshell_mcp_server_CN.md  oceanbase_mcp_server.md  oceanbase_mcp_server_CN.md  ocp_mcp_server.md  ocp_mcp_server_CN.md  okctl_mcp_server.md  okctl_mcp_server_CN.md
src/obcloud_mcp_server/: README.md  package.json  tsconfig.json
src/obcloud_mcp_server/src/: constants.ts  env.ts  index.ts  prompts.ts  resources.ts  tools.ts  typings.d.ts  util.ts
src/obcloud_mcp_server/src/functions/: index.ts  login.ts  request.ts
src/obdiag_mcp_server/: README.md  pyproject.toml  server.py  setup.py
src/obdiag_mcp_server/obdiag_mcp/: __main__.py  server.py
src/obdiag_mcp_server/tools/: obdiag_tools.py
src/obshell_mcp_server/: README.md  README_CN.md  pyproject.toml  setup.py
src/obshell_mcp_server/obshell_mcp/: __init__.py  __main__.py  server.py
src/oceanbase_mcp_server/: README.md  README_CN.md  __init__.py  pyproject.toml  server.py  server2.py  server_on_fastmcp.py
src/oceanbase_mcp_server/oceanbase_mcp/: __main__.py  server.py
src/ocp_mcp_server/: README.md  README_CN.md  __init__.py  server.py
src/ocp_mcp_server/ocp-doc-min/: 10.task-management.md  12.ob-user-and-permission-management.md  13.ocpagent-management.md  14.sql-performance.md  15.backup-and-restoration-3.md  16.other.md  17.appendix-1.md  3.cluster-information.md  4.tenant-information.md  5.host-module.md  6.software-package-1.md  7.obproxy-management.md  8.monitoring.md
src/okctl_mcp_server/: __init__.py  server.py
src/okctl_mcp_server/tools/: __init__.py  backup_policy.py  clusters.py  components.py  install.py  sql.py  tenants.py
src/okctl_mcp_server/utils/: errors.py
tests/oceanbase_mcp_server/: conftest.py  test_server.py
tests/ocp_mcp_server/: test_server.py
tests/okctl_mcp_server/: test_mcp_server.py
