[project]
name = "oceanbase-mcp"
version = "0.0.1"
description = "A Model Context Protocol (MCP) server that enables secure interaction with OceanBase databases. This server allows AI assistants to list tables, read data, and execute SQL queries through a controlled interface, making database exploration and analysis safer and more structured."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 3 - Alpha',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
keywords = [
    "oceanbase",
    "mcp",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=2.5.1",
    "mysql-connector-python>=9.1.0",
    "python-dotenv",
    "beautifulsoup4>=4.13.3",
    "certifi>=2025.4.26",
    "requests"
]

[project.scripts]
oceanbase_mcp_server = "oceanbase_mcp.server:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
